--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
+   font-family: 'Roboto', sans-serif;
+}
+
+body {
+   width: 100vw;
+   height: 100vh;
+}
+
+h1, h3{
+   color: #000;
+   font-size: 20px;
+   font-weight: 700;
+}
+
+h3, p {
+   font-size: 14px;
+}
+
+p {
+   color: #515151;
 }
 
 ul li {
