--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,10 +12,16 @@ body {
    height: 100vh;
 }
 
-h1, h3{
+h1 {
    color: #000;
    font-size: 20px;
    font-weight: 700;
+}
+
+h2 {
+   color: #000;
+   font-size: 14px;
+   font-weight: 600;
 }
 
 h3, p {
